updated some files form recommended upgrades